oops need to fix search bar spacing

--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,7 @@ body{
   height: 50px;
   padding: 10px;
   margin: auto;
+  margin-top: 50px;
   background: transparent;
   display: flex;
   align-items: center;
@@ -18,7 +19,9 @@ body{
 .search-bar{
   background: rgb(184, 186, 213);
   width: 490px;
+  height: 30px;
   display: flex;
+  box-sizing: border-box;
   align-items: center;
   border-radius: 10%;
   padding: 5px 20px;
